--- a/grid.html
+++ b/grid.html
@@ -10,7 +10,7 @@
             /* grid-template-columns: 200px 200px 200px 200px; */
             /* grid-template-columns: repeat(3, 100px) 200px 150px; */
             /* grid-template-columns: repeat(6, 1fr) 2fr; */
-            grid-template-columns: 100px 200px auto;
+            grid-template-columns: 100px 200px 300px;
             justify-content: center;
         }
         .item{
